@@ -45,6 +45,7 @@
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
                             <excludes>
                                 <exclude>**/*IT.java</exclude>
                             </excludes>
@@ -109,11 +110,10 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
-<!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
-                <version>1.0</version>
+                <version>1.2</version>
                 <executions>
                     <execution>
                         <phase>validate</phase>
@@ -127,7 +127,6 @@
                     <doUpdate>false</doUpdate>
                 </configuration>
             </plugin>
--->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -144,7 +143,7 @@
 
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.2</version>
+                <version>2.4</version>
                 <executions>
                     <execution>
                         <goals>
